Fix webkit spacing bug of guest search fill button.

--- a/site/src/styles/layout.scss
+++ b/site/src/styles/layout.scss
@@ -61,11 +61,15 @@ time {
   width: 60%;
 }
 
+input.ui-input-text {
+  margin: 0;
+}
+
 .infield-button {
   position: absolute;
   top: 0;
   left: 80.6%;
-  height: 1.3em;
+  height: 22px;
   width: 25px;
   margin: 0;
   padding: 0.4em 5px 0.4em 0;
